feat(java17): add additional modules to open (#3408)
* For Webservice connector (output serialization)
* For Salesforce connector (output serialization)
* For process variable serialization